rename gray color variants

--- a/contact-host.html
+++ b/contact-host.html
@@ -214,7 +214,7 @@
                         <div
                           style="
                             display: contents;
-                            --dls19-brand-color: var(--f-k-smk-x);
+                            --dls19-brand-color: var(--gray-900);
                           "
                         >
                           <div style="--page-shell-max-content-width: 1280px">
@@ -670,7 +670,7 @@
                       <div
                         style="
                           display: contents;
-                          --dls19-brand-color: var(--f-k-smk-x);
+                          --dls19-brand-color: var(--gray-900);
                         "
                       >
                         <div style="--page-shell-max-content-width: 1280px">
@@ -2422,25 +2422,25 @@
                                                                         border-top-color: var(
                                                                           --comboInputGroup_borderColor,
                                                                           var(
-                                                                            --iw-ihca
+                                                                            --gray-400
                                                                           )
                                                                         );
                                                                         border-right-color: var(
                                                                           --comboInputGroup_borderColor,
                                                                           var(
-                                                                            --iw-ihca
+                                                                            --gray-400
                                                                           )
                                                                         );
                                                                         border-bottom-color: var(
                                                                           --comboInputGroup_borderColor,
                                                                           var(
-                                                                            --iw-ihca
+                                                                            --gray-400
                                                                           )
                                                                         );
                                                                         border-left-color: var(
                                                                           --comboInputGroup_borderColor,
                                                                           var(
-                                                                            --iw-ihca
+                                                                            --gray-400
                                                                           )
                                                                         );
                                                                         border-width: 1px;
@@ -2556,25 +2556,25 @@
                                                                         border-top-color: var(
                                                                           --comboInputGroup_borderColor,
                                                                           var(
-                                                                            --iw-ihca
+                                                                            --gray-400
                                                                           )
                                                                         );
                                                                         border-right-color: var(
                                                                           --comboInputGroup_borderColor,
                                                                           var(
-                                                                            --iw-ihca
+                                                                            --gray-400
                                                                           )
                                                                         );
                                                                         border-bottom-color: var(
                                                                           --comboInputGroup_borderColor,
                                                                           var(
-                                                                            --iw-ihca
+                                                                            --gray-400
                                                                           )
                                                                         );
                                                                         border-left-color: var(
                                                                           --comboInputGroup_borderColor,
                                                                           var(
-                                                                            --iw-ihca
+                                                                            --gray-400
                                                                           )
                                                                         );
                                                                         border-width: 1px;
