--- a/merchandising.html
+++ b/merchandising.html
@@ -214,7 +214,7 @@
                               <div
                                 style="
                                   display: contents;
-                                  --dls19-brand-color: var(--f-k-smk-x);
+                                  --dls19-brand-color: var(--gray-900);
                                 "
                               >
                                 <div>
@@ -10551,7 +10551,7 @@
                       <div
                         style="
                           display: contents;
-                          --dls19-brand-color: var(--f-k-smk-x);
+                          --dls19-brand-color: var(--gray-900);
                         "
                       >
                         <div>
