--- a/products-luxe.html
+++ b/products-luxe.html
@@ -210,7 +210,7 @@
                       <div
                         style="
                           display: contents;
-                          --dls19-brand-color: var(--f-k-smk-x);
+                          --dls19-brand-color: var(--gray-900);
                         "
                       >
                         <div class="products-container">
@@ -1076,7 +1076,7 @@
                                                           width: 12px;
                                                           display: block;
                                                           fill: var(
-                                                            --f-k-smk-x
+                                                            --gray-900
                                                           );
                                                         "
                                                       >
@@ -6800,7 +6800,7 @@
                     <div
                       style="
                         display: contents;
-                        --dls19-brand-color: var(--f-k-smk-x);
+                        --dls19-brand-color: var(--gray-900);
                       "
                     >
                       <div class="products-container">
@@ -15038,25 +15038,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
@@ -15170,25 +15170,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
