--- a/profile.html
+++ b/profile.html
@@ -1183,10 +1183,10 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                         role="group"
                                                         style="
                                                           --theme_typography-color-primary: var(
-                                                            --f-k-smk-x
+                                                            --gray-900
                                                           );
                                                           --theme_typography-color-secondary: var(
-                                                            --fo-jk-r-s
+                                                            --gray-500
                                                           );
                                                         "
                                                       >
@@ -2260,10 +2260,10 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                   role="group"
                                                   style="
                                                     --theme_typography-color-primary: var(
-                                                      --f-k-smk-x
+                                                      --gray-900
                                                     );
                                                     --theme_typography-color-secondary: var(
-                                                      --fo-jk-r-s
+                                                      --gray-500
                                                     );
                                                   "
                                                 >
@@ -2346,7 +2346,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                                   height: 14px;
                                                                   width: 14px;
                                                                   fill: var(
-                                                                    --f-mkcy-f
+                                                                    --white
                                                                   );
                                                                 "
                                                                 aria-hidden="true"
