--- a/signup_login.html
+++ b/signup_login.html
@@ -1048,19 +1048,19 @@
                                                 border-radius: 8px 8px 0px 0px;
                                                 border-top-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-right-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-bottom-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-left-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-width: 1px;
                                                 z-index: 0;
@@ -1124,19 +1124,19 @@
                                                 border-radius: 0px 0px 8px 8px;
                                                 border-top-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-right-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-bottom-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-left-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-width: 1px;
                                                 z-index: 0;
@@ -2436,19 +2436,19 @@
                                                 border-radius: 8px 8px 0px 0px;
                                                 border-top-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-right-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-bottom-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-left-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-width: 1px;
                                                 z-index: 0;
@@ -2507,19 +2507,19 @@
                                                 border-radius: 0px 0px 8px 8px;
                                                 border-top-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-right-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-bottom-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-left-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-width: 1px;
                                                 z-index: 0;
@@ -2767,19 +2767,19 @@
                                                   border-radius: 8px;
                                                   border-top-color: var(
                                                     --comboInputGroup_borderColor,
-                                                    var(--iw-ihca)
+                                                    var(--gray-400)
                                                   );
                                                   border-right-color: var(
                                                     --comboInputGroup_borderColor,
-                                                    var(--iw-ihca)
+                                                    var(--gray-400)
                                                   );
                                                   border-bottom-color: var(
                                                     --comboInputGroup_borderColor,
-                                                    var(--iw-ihca)
+                                                    var(--gray-400)
                                                   );
                                                   border-left-color: var(
                                                     --comboInputGroup_borderColor,
-                                                    var(--iw-ihca)
+                                                    var(--gray-400)
                                                   );
                                                   border-width: 1px;
                                                   z-index: 0;
@@ -4429,19 +4429,19 @@
                                               border-radius: 8px 8px 0px 0px;
                                               border-top-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-right-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-bottom-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-left-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-width: 1px;
                                               z-index: 0;
@@ -4505,19 +4505,19 @@
                                               border-radius: 0px 0px 8px 8px;
                                               border-top-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-right-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-bottom-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-left-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-width: 1px;
                                               z-index: 0;
@@ -5814,19 +5814,19 @@
                                               border-radius: 8px 8px 0px 0px;
                                               border-top-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-right-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-bottom-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-left-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-width: 1px;
                                               z-index: 0;
@@ -5885,19 +5885,19 @@
                                               border-radius: 0px 0px 8px 8px;
                                               border-top-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-right-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-bottom-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-left-color: var(
                                                 --comboInputGroup_borderColor,
-                                                var(--iw-ihca)
+                                                var(--gray-400)
                                               );
                                               border-width: 1px;
                                               z-index: 0;
@@ -6145,19 +6145,19 @@
                                                 border-radius: 8px;
                                                 border-top-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-right-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-bottom-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-left-color: var(
                                                   --comboInputGroup_borderColor,
-                                                  var(--iw-ihca)
+                                                  var(--gray-400)
                                                 );
                                                 border-width: 1px;
                                                 z-index: 0;
