--- a/specific_trip.html
+++ b/specific_trip.html
@@ -3464,7 +3464,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -3554,7 +3554,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -3645,7 +3645,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -3735,7 +3735,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -3825,7 +3825,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -3915,7 +3915,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4005,7 +4005,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4095,7 +4095,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4185,7 +4185,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4275,7 +4275,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4365,7 +4365,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4455,7 +4455,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4545,7 +4545,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4636,7 +4636,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4726,7 +4726,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4816,7 +4816,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4907,7 +4907,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -4997,7 +4997,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
@@ -5087,7 +5087,7 @@
                                                           0px,
                                                           -50%
                                                         );
-                                                        color: var(--f-k-smk-x);
+                                                        color: var(--gray-900);
                                                       "
                                                     >
                                                       <div
