--- a/help.html
+++ b/help.html
@@ -56,7 +56,7 @@
                                 display: block;
                                 height: 32px;
                                 width: 32px;
-                                fill: var(--f-k-smk-x);
+                                fill: var(--gray-900);
                               "
                               aria-hidden="true"
                               role="presentation"
