--- a/products-plus.html
+++ b/products-plus.html
@@ -210,7 +210,7 @@
                       <div
                         style="
                           display: contents;
-                          --dls19-brand-color: var(--f-k-smk-x);
+                          --dls19-brand-color: var(--gray-900);
                         "
                       >
                         <div class="products-container">
@@ -902,7 +902,7 @@
         <div class="s1isfkwk dir dir-ltr"><button type="button" class="b1k5q1b3 v18vkvko dir dir-ltr"><span
               class="c1d1a0n6 dir dir-ltr"><span class="cn5lml1 dir dir-ltr">Show more</span><span
                 class="tukjzc dir dir-ltr"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
-                  focusable="false" style="height: 12px; width: 12px; display: block; fill: var(--f-k-smk-x);">
+                  focusable="false" style="height: 12px; width: 12px; display: block; fill: var(--gray-900);">
                   <path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z"
                     fill-rule="evenodd"></path>
                 </svg></span></span></button></div>
@@ -6976,7 +6976,7 @@
                     <div
                       style="
                         display: contents;
-                        --dls19-brand-color: var(--f-k-smk-x);
+                        --dls19-brand-color: var(--gray-900);
                       "
                     >
                       <div class="products-container">
@@ -15244,25 +15244,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
@@ -15376,25 +15376,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
