--- a/products.html
+++ b/products.html
@@ -213,7 +213,7 @@
                       <div
                         style="
                           display: contents;
-                          --dls19-brand-color: var(--f-k-smk-x);
+                          --dls19-brand-color: var(--gray-900);
                         "
                       >
                         <div class="products-container">
@@ -2114,7 +2114,7 @@
                                                           width: 12px;
                                                           display: block;
                                                           fill: var(
-                                                            --f-k-smk-x
+                                                            --gray-900
                                                           );
                                                         "
                                                       >
@@ -7838,7 +7838,7 @@
                     <div
                       style="
                         display: contents;
-                        --dls19-brand-color: var(--f-k-smk-x);
+                        --dls19-brand-color: var(--gray-900);
                       "
                     >
                       <div class="products-container">
@@ -9982,7 +9982,7 @@
                                                             width: 12px;
                                                             display: block;
                                                             fill: var(
-                                                              --f-k-smk-x
+                                                              --gray-900
                                                             );
                                                           "
                                                         >
@@ -16746,25 +16746,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
@@ -16878,25 +16878,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
@@ -17244,25 +17244,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
@@ -17376,25 +17376,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
@@ -18075,25 +18075,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor,
                                                                                 var(
-                                                                                  --iw-ihca
+                                                                                  --gray-400
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
